@@ -1,6 +1,6 @@
 [general]
 # version, don't edit this unless you're trying to manually update the config file to a newer version of mmtester
-version = 0.2.1
+version = 0.2.2
 
 # dir where result files are saved
 results_dir = .
@@ -22,6 +22,15 @@ keep_output_files = True
 
 # number of precision digits used in scoring
 precision = 4
+
+# additional column for showing number of best scores achieved
+show_bests = True
+
+# additional column for showing number of best uniques scores achieved
+show_uniques = True
+
+# automatically hides column for number of fails if there are no failed test cases
+autohide_fails = False
 
 
 [default]
